--- a/q2/client/package.json
+++ b/q2/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "q1",
+  "name": "client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
+    "chart.js": "^4.4.7",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-router": "^7.0.1"
+    "react-router": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -28,4 +29,3 @@
     "vite": "^6.0.1"
   }
 }
-
